TRAC-6100 Code behind view responsiveness fixed

--- a/src/app/components/modals/select-batch/select-batch.component.scss
+++ b/src/app/components/modals/select-batch/select-batch.component.scss
@@ -73,7 +73,7 @@
       padding-left: 5px;
       padding-top: 0.7rem;
       padding-bottom: 0.7rem;
-      font-size:8px;
+      font-size:6px;
     }  
   }
 
@@ -169,7 +169,7 @@
       padding-left: 5px;
       padding-top: 0.7rem;
       padding-bottom: 0.7rem;
-      font-size:8px;
+      font-size:6px;
     }   
   }
 
